fixed broken ref

--- a/main.tex
+++ b/main.tex
@@ -435,7 +435,7 @@ Finally, inserting this result into \eqnref{E:line} with some rearrangement yiel
     - \frac{\mathrm{dot}\left(\labcomps{\Zd}^T,\; \labcomps{\Pthree - \Pone}\right)}
            {\mathrm{dot}\left(\labcomps{\Zd}^T,\; \labcomps{\dhat}\right)}\labcomps{\dhat} \right] }, \label{E:Pfour}
 \end{equation}
-where $\labcomps{\dhat}$ is obtained from \eqnref{E:dhat} and \eqnref{E:gvec_l}.
+where $\labcomps{\dhat}$ is obtained from \eqnref{E:dhat} and \eqnref{E:gvecLab}.
 % as
 %\begin{align}
 %  \dhati &= \left(\delta_{ij} - 2\ghati\ghatj\right)\cdot\bhatj
@@ -453,7 +453,7 @@ The action of the oscillation in a canted configuration is represented by the ro
 	      -\cox\siw & \six &   \cox\cow
 	   \end{array}\right] . \nonumber
 \end{align}
-From \eqnref{E:gvec_l} we have
+From \eqnref{E:gvecLab} we have
 \begin{equation}
     \samcomps{\gvec} = \samcomps{\defgrad^{-T}}\bmat\rcpcomps{\gvec} \label{E:ghatInSamp}
 \end{equation}
